--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 SciGL - The Scientific visualization library based on OpenGL
-(c) 2010 by Armand Niederberger <Armand.Niederberger@opfocus.net>
+(c) 2010 by Armand Niederberger <armand@armandniederberger.com>
 
 Version 0.1 beta:
 Contains basic functionality to plot a 3D graph representing a nx*ny height matrix stored in a one-dimensional array.
